fixes scrollbar when 1 sextant theme remains

--- a/web-ui/src/main/resources/catalog/views/sextant/api.css
+++ b/web-ui/src/main/resources/catalog/views/sextant/api.css
@@ -18893,7 +18893,6 @@
 .g [data-ng-search-form] .sxt-categorytree ul li {
   display: block;
   padding: 10px -10px;
-  margin-bottom: -1px;
 }
 .gn [data-ng-search-form] .sxt-categorytree ul li label,
 .g [data-ng-search-form] .sxt-categorytree ul li label {
