--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -547,7 +547,6 @@ div.gn, div.g, * {
       li {
         display: block;
         padding: 10px -10px;
-        margin-bottom: -1px;
         label {
           margin-bottom: 2px;
           font-weight: normal;
